// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`projects > create 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create and connect with psql 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
{"psql-cli-args":["postgres://localhost:5432/test_project"]}"
`;

exports[`projects > create and connect with psql and psql args 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
{"psql-cli-args":["postgres://localhost:5432/test_project","-c","SELECT 1"]}"
`;

exports[`projects > create project with default autoscaled CU 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create project with default fixed size CU 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create project with setting the context 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create with database and role 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create with hipaa flag 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create with org id 1`] = `
"project:
  id: new-project-789012
  name: test_project
  created_at: 2022-01-01T00:00:00.000Z
  org_id: org-2
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > delete 1`] = `
"id: test
name: test
create_at: 2018-01-01T00:00:00.000Z
"
`;

exports[`projects > get 1`] = `
"id: test
name: test_project
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
"
`;

exports[`projects > list 1`] = `
"projects:
  - id: 1
    name: Project_1
    created_at: 2019-01-01T00:00:00.000Z
    updated_at: 2019-01-01T00:00:00.000Z
  - id: 2
    name: Project_2
    created_at: 2019-01-01T00:00:00.000Z
    updated_at: 2019-01-01T00:00:00.000Z
  - id: 3
    name: Project_3
    created_at: 2019-01-01T00:00:00.000Z
    updated_at: 2019-01-01T00:00:00.000Z
shared_with_you:
  - id: adj-noun-12401747
    region_id: aws-us-east-2
    name: Shared Project
    created_at: 2024-04-03T04:45:46Z
    updated_at: 2024-04-11T16:13:43Z
"
`;

exports[`projects > list with org id 1`] = `
"- id: 4
  name: Project_4
  created_at: 2019-01-01T00:00:00.000Z
  updated_at: 2019-01-01T00:00:00.000Z
  org_id: org-2
- id: 5
  name: Project_5
  created_at: 2019-01-01T00:00:00.000Z
  updated_at: 2019-01-01T00:00:00.000Z
  org_id: org-2
- id: 6
  name: Project_6
  created_at: 2019-01-01T00:00:00.000Z
  updated_at: 2019-01-01T00:00:00.000Z
  org_id: org-2
"
`;

exports[`projects > update hipaa flag 1`] = `
"id: test
name: test_project
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
  hipaa: true
"
`;

exports[`projects > update name 1`] = `
"id: test
name: test_project_new_name
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
"
`;

exports[`projects > update project with default autoscaled CU 1`] = `
"id: test
name: test_project_with_autoscaling
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
"
`;

exports[`projects > update project with default fixed size CU 1`] = `
"id: test
name: test_project_with_fixed_cu
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
"
`;
